<resources>
    <string name="app_name">KLiaoU</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_setting">setting</string>
    <string name="bl_not_available">Bluetooth not available</string>
    <string name="loc_not_available">Location not available</string>
    <string name="gps_not_available">GPS not available</string>
    <string name="goto_gps_setting_msg">Turn on GPS</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="no_data">No data</string>
    <string name="label_data">Data:</string>
    <string name="label_gender">Gender:</string>
    <string name="label_nickname">Nickname:</string>
    <string name="label_location">Location:</string>
    <string name="label_device_name">Device name:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <string name="action_settings">Settings</string>
    <string name="broadcast_device">Broadcast Device</string>
    <string name="already_started">Already started.</string>
    <string name="data_too_large">Data too large.</string>
    <string name="not_supported">Feature not supported.</string>
    <string name="inter_err">Internal error.</string>
    <string name="loc_req_title">Need location access for Bluetooth Scanning</string>
    <string name="loc_req_msg">Grant location access to discover nearby Bluetooth devices</string>
    <string name="okay">Okay</string>
    <string name="loc_req_denied_msg">Cannot scan for Bluetooth because location permission was denied</string>
    <string name="bt_scanning">already scanning</string>
    <string name="bt_notif_title">Advertising</string>
    <string name="bt_notif_txt">Discoverable to others</string>
    <string name="refresh">Refresh</string>

    <string name="my_location">我的位置</string>
    <string name="my_nickname">我的昵称</string>
    <string name="my_gender">我的性别</string>
    <string name="search_gender">寻找性别</string>
    <string name="gender_male">男</string>
    <string name="gender_female">女</string>
    <string name="gender_other1">不公开</string>
    <string name="gender_other2">不问</string>

    <string name="chat_greeting">聊天</string>
    <string name="getting_ready">Wait A Moment</string>
    <string name="chat_send_message">发送信息</string>
    <string name="chat_hangup_title">断开链接</string>
    <string name="chat_hangup_message">对方已断开链接</string>

</resources>