<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.SettingFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="昵称"
                android:textSize="16sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/txt_my_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="LiaoU User"
                android:inputType="text"
                android:maxLines="1"
                android:maxLength="10"
                android:textSize="20sp" />
            <Space android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <TextView
                android:id="@+id/my_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="我的性别"
                android:textSize="16sp"
                android:textStyle="bold" />
            <RadioGroup
                android:id="@+id/rdMySex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <RadioButton
                    android:id="@+id/rdbMySexMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:padding="10dp"
                    android:text="@string/gender_male"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/rdbMySexFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:padding="10dp"
                    android:text="@string/gender_female"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/rdbMySexOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:padding="10dp"
                    android:text="@string/gender_other1"
                    android:textSize="20sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/remote_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="寻找"
                android:textSize="16sp"
                android:textStyle="bold" />
            <RadioGroup
                android:id="@+id/rdRemoteSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <RadioButton
                    android:id="@+id/rdbRemoteSexMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:padding="10dp"
                    android:text="@string/gender_male"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/rdbRemoteSexFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:padding="10dp"
                    android:text="@string/gender_female"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/rdbRemoteSexOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:padding="10dp"
                    android:text="@string/gender_other2"
                    android:textSize="20sp" />
            </RadioGroup>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>